# PyFracVAL

./: .envrc  .gitignore  ACTION_PLAN.md  ADAPTIVE_TOLERANCE_RESULTS.md  AGENTS.md  BATCH_PARALLELIZATION_ANALYSIS.md  BATCH_PARALLELIZATION_SUMMARY.md  BENCHMARK_COMPARISON.md  BENCHMARK_SUMMARY.md  CANDIDATE_RELAXATION_RESULTS.md  CCA.py  EXTREME_DF_ANALYSIS.md  FIBONACCI_RESULTS.md  GEMINI.md  IMPROVEMENT_ANALYSIS.md  ISSUE_TRACKER_SUMMARY.md  LICENSE  ONGOING_EXPERIMENTS.md  PARAMETER_SWEEP_ANALYSIS.md  PCA.py  PHASE3B_HYBRID_ANALYSIS.md  PHASE3_ANALYSIS.md  PHASE3_CPU_PARALLELIZATION.md  PHASE3_HYBRID_STRATEGY.md  PHASE4A_BOUNDING_SPHERES_ANALYSIS.md  QUICK_REFERENCE.md  README.md  SESSION_ADAPTIVE_TOLERANCE.md  SESSION_CANDIDATE_RELAXATION.md  SESSION_SUMMARY.md  SIGMA_FAILURE_ANALYSIS.md  SLEEP_SUMMARY.txt  STICKING_ANALYSIS.md  SWAP_FIX_RESULTS.md  WORK_COMPLETED.md  batch.sh  devenv.nix  flake.nix  main.py  pyproject.toml
.beads/: interactions.jsonl  issues.jsonl  last-touched
benchmark_results/: batch_generation_quick_500fcb0.json  fractal_structure_validation.json  n1024_1000seeds_008f226.json  n512_bisect_30seeds.json  n512_bisect_30seeds_cmp.json  phase10_jit_reintento_93867b2.json  phase11_jit_tsi_49bd6ff.json  phase12_pca_bisect_54b535d.json  phase13_parallel_subcl.json  phase1_performance.json  phase3_batch_rotation_7e67f6e.json  phase3b_hybrid_f5be95f.json  phase4a_bounding_spheres_233efea.json  phase5_p0_candidate_fix_87684e6.json  phase6_steps45_alloc_props_cache.json  phase7_jit_rodrigues.json  phase8_overlap_threshold_fix.json  phase_comparison_721ebf5.json  phase_comparison_b8009c3.json  phase_comparison_be672c1.json  stable_Default_config.json  stable_Moderate_polydisperse.json  stable_Original_paper_example.json  stable_summary.json  unified_orchestrator_summary_20260408_145332.json  unified_orchestrator_summary_20260408_151850.json  unified_orchestrator_summary_20260408_195255.json  unified_orchestrator_summary_20260410_141731.json  unified_orchestrator_summary_20260410_142111.json
benchmarks/: README.md  __init__.py  analyze_dask_profiling_results.py  analyze_stability.py  batch_generation_benchmark.py  batch_generation_quick_benchmark.py  batch_generation_realistic_benchmark.py  batch_generation_working_benchmark.py  compare_sweeps.py  create_visualizations.py  extreme_df_test.py  large_aggregate_test.py  parameter_sweep.py  phase1_performance_test.py  phase3_batch_rotation_benchmark.py  phase3b_hybrid_benchmark.py  phase4a_bounding_spheres_benchmark.py  phase_comparison_benchmark.py  run.py  stability_sweep.py  (+5 more)
(+111 files in other folders)
