[project]
name = "PyFracVAL"
version = "0.0.1"
description = "Python implementation of FracVAL for generting fractal particle clusters"
readme = "README.md"
authors = [
  { name = "aetherspritee" },
  { name = "Mirza Arnaut", email = "mirza.arnaut@tu-dortmund.de" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
  "click>=8.1.7",
  "jax>=0.4.28",
  "jaxtyping>=0.2.34",
  "numba>=0.60.0",
  "numpy>=1.26.4,<2.0.0",
  "polars>=1.12.0",
  "scipy>=1.14.1",
  "tqdm>=4.66.5",
  "pyvista>=0.44.1",
  "stpyvista>=0.1.4",
  "streamlit>=1.41.1",
]

[project.scripts]
pyfracval = "pyfracval.cli:cli"

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 80

[tool.ruff.lint]
ignore = ["F722"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
