[project]
name = "PyFracVAL"
version = "0.0.1"
description = "Python implementation of FracVAL for generting fractal particle clusters"
readme = "README.md"
authors = [
  { name = "aetherspritee" },
  { name = "Mirza Arnaut", email = "mirza.arnaut@tu-dortmund.de" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
  "pydantic>=2.11.1",
  "pyyaml>=6.0.2",
  "click>=8.1.7",
  "numba>=0.60.0",
  "numpy>=1.26.4",
  "polars>=1.12.0",
  "pandas>=2.2.3",
  "scipy>=1.14.1",
  "tqdm>=4.66.5",
  "pyvista>=0.44.1",
  "stpyvista>=0.1.4",
  "streamlit>=1.41.1",
]

[dependency-groups]
docs = [
  "furo>=2024.8.6",
  "myst-parser>=4.0.1",
  "sphinx-autoapi>=3.6.0",
  "sphinx-autodoc-typehints>=3.0.1",
  "sphinx-copybutton>=0.5.2",
  "sphinx>=8.1.3",
  "sphinxcontrib-bibtex>=2.6.3",
  "sphinxcontrib-napoleon>=0.7",
]
test = ["pytest>=8.3.3"]

[project.scripts]
pyfracval = "pyfracval.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
